Introduces new synchronization